--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "laravel-mix": "^5.0.1",
     "laravel-mix-purgecss": "^5.0.0-rc.1",
     "lint-staged": "^10.0.8",
+    "make-dir-cli": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "resolve-url-loader": "^3.1.0",
     "rimraf": "^3.0.2",
