feat: add meta info

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -355,3 +355,7 @@ collections:
           - {label: "Contact Email", name: "email", widget: "string"}
           - {label: "Contact Phone", name: "phone", widget: "string"}
           - {label: "Contact Fax", name: "fax", widget: "string"}
+          - {label: "Physical Address", name: "address", widget: "text"}
+          - {label: "Twitter Username", name: "twitter", widget: "string"}
+          - {label: "Medium Username", name: "medium", widget: "string"}
+          - {label: "YouTube Link", name: "youtube", widget: "string"}
