--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build:assets": "cross-env NODE_ENV=production run-s mix",
     "build:site": "eleventy --config=eleventy.config.js",
+    "build:bundle": "rollup --config",
     "build:cms": "make-dir dist/admin && nunjucks-precompile src/_includes > dist/admin/templates.js -i \"\\.(njk|css|svg)$\"",
     "build": "run-s clean build:*",
     "clean": "run-p clean:*",
@@ -49,10 +50,12 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@erquhart/rollup-plugin-node-builtins": "^2.1.5",
     "browser-sync-webpack-plugin": "^2.0.1",
     "concurrently": "^5.1.0",
     "cross-env": "^7.0.0",
     "dotenv": "^8.2.0",
+    "eleventy-plugin-error-overlay": "^0.1.2",
     "husky": "^4.2.3",
     "laravel-mix": "^5.0.1",
     "laravel-mix-purgecss": "^5.0.0-rc.1",
@@ -61,6 +64,10 @@
     "npm-run-all": "^4.1.5",
     "resolve-url-loader": "^3.1.0",
     "rimraf": "^3.0.2",
+    "rollup": "^2.6.1",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
     "stylelint": "^13.2.1",
@@ -73,7 +80,6 @@
   },
   "dependencies": {
     "@11ty/eleventy": "^0.10.0",
-    "@11ty/eleventy-navigation": "^0.1.5",
     "@11ty/eleventy-plugin-rss": "^1.0.7",
     "@tbranyen/jsdom": "^13.0.0",
     "html-minifier": "^4.0.0",
