--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "build:assets": "cross-env NODE_ENV=production run-s mix",
     "build:site": "eleventy --config=eleventy.config.js",
+    "build:bundle": "rollup --config",
     "build:cms": "make-dir dist/admin && nunjucks-precompile src/_includes > dist/admin/templates.js -i \"\\.(njk|css|svg)$\"",
     "build": "run-s clean build:*",
     "clean": "run-p clean:*",
     "clean:dist": "rimraf dist",
     "mix": "webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "start": "run-s clean concurrently \"npm run watch:site\" \"npm run watch:assets\"",
+    "start": "npm run clean && concurrently \"npm run watch:site\" \"npm run watch:assets\"",
     "lint:css": "stylelint src/scss/**/*.scss",
     "lint:js": "xo",
     "lint": "run-s lint:*",
@@ -49,10 +50,12 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@erquhart/rollup-plugin-node-builtins": "^2.1.5",
     "browser-sync-webpack-plugin": "^2.0.1",
     "concurrently": "^5.1.0",
     "cross-env": "^7.0.0",
     "dotenv": "^8.2.0",
+    "eleventy-plugin-error-overlay": "^0.1.2",
     "husky": "^4.2.3",
     "laravel-mix": "^5.0.1",
     "laravel-mix-purgecss": "^5.0.0-rc.1",
@@ -61,6 +64,10 @@
     "npm-run-all": "^4.1.5",
     "resolve-url-loader": "^3.1.0",
     "rimraf": "^3.0.2",
+    "rollup": "^2.6.1",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
     "stylelint": "^13.2.1",
