--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -76,8 +76,8 @@ collections:
                   - { label: "Yellow 900", value: "yellow-900" }
                 default: ["indigo-500"]
                 required: false
-              - {label: "Image", name: "image", widget: "string", required: false}
-              - {label: "Image (2x)", name: "image2x", widget: "string", required: false}
+              - {label: "Image", name: "image", widget: "image", required: false}
+              - {label: "Image (2x)", name: "image2x", widget: "image", required: false}
               - {label: "Image Alternative Text", name: "imageAltText", widget: "string", required: false}
               - label: "Image Order"
                 name: "imageOrder"
@@ -357,7 +357,7 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "layouts/post.njk"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Date", name: "date", widget: "datetime", timeFormat: false}
-      - {label: "Author", name: "author", widget: "string", required: false}
+      - {label: "Author", name: "author", widget: "string", required: false, default: "IDRC Team"}
       - {label: "Excerpt", name: "excerpt", widget: "text", required: false}
       - {label: "Permalink Override (Pattern: '/your-slug/index.html')", name: "permalink", widget: "string", required: false}
       - {label: "SEO Meta Title", name: "metaTitle", widget: "string", required: false}
