--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:assets": "cross-env NODE_ENV=production run-s mix",
     "build:site": "eleventy --config=eleventy.config.js",
     "build:bundle": "rollup --config",
-    "build:cms": "make-dir dist/admin && nunjucks-precompile src/_includes > dist/admin/templates.js -i \"\\.(njk|css|svg)$\"",
+    "build:cms": "make-dir dist/admin && nunjucks-precompile src/_includes > dist/admin/templates.js -i \"\\.(njk|svg)$\"",
     "build": "run-s clean build:*",
     "clean": "run-p clean:*",
     "clean:dist": "rimraf dist",
