--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clean": "run-p clean:*",
     "clean:dist": "rimraf dist",
     "mix": "webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "start": "npm run clean && concurrently \"npm run watch:site\" \"npm run watch:assets\"",
+    "start": "npm run clean && npm run build:bundle && npm run build:cms && concurrently \"npm run watch:site\" \"npm run watch:assets\"",
     "lint:css": "stylelint src/scss/**/*.scss",
     "lint:js": "xo",
     "lint": "run-s lint:*",
