--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clean": "run-p clean:*",
     "clean:dist": "rimraf dist",
     "mix": "webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "start": "npm run clean && concurrently \"npm run watch:site\" \"npm run watch:assets\"",
+    "start": "npm run clean && npm run build:bundle && npm run build:cms && concurrently \"npm run watch:site\" \"npm run watch:assets\"",
     "lint:css": "stylelint src/scss/**/*.scss",
     "lint:js": "xo",
     "lint": "run-s lint:*",
@@ -58,7 +58,6 @@
     "eleventy-plugin-error-overlay": "^0.1.2",
     "husky": "^4.2.3",
     "laravel-mix": "^5.0.1",
-    "laravel-mix-purgecss": "^5.0.0-rc.1",
     "lint-staged": "^10.0.8",
     "make-dir-cli": "^2.0.0",
     "npm-run-all": "^4.1.5",
@@ -74,7 +73,6 @@
     "stylelint-config-standard-scss": "^1.1.0",
     "stylelint-order": "^4.0.0",
     "stylelint-scss": "^3.15.0",
-    "tailwindcss": "^1.2.0",
     "vue-template-compiler": "^2.6.11",
     "xo": "^0.28.0"
   },
