--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "xo": "^0.28.0"
   },
   "dependencies": {
+    "eleventy-plugin-error-overlay":"0.1.2",
     "@11ty/eleventy": "^0.10.0",
     "@11ty/eleventy-navigation": "^0.1.5",
     "@11ty/eleventy-plugin-rss": "^1.0.7",
