feat: add image support for ideas

--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@tbranyen/jsdom": "^13.0.0",
     "eleventy-plugin-pwa": "^1.0.8",
     "html-minifier": "^4.0.0",
+    "image-size": "^0.8.3",
     "nunjucks": "^3.2.1",
     "slugify": "^1.4.0"
   }
