feat: rename post to news, integrate RSS feed, add featured images

--- a/src/ideas/ideas.json
+++ b/src/ideas/ideas.json
@@ -1,5 +1,5 @@
 {
-    "layout": "layouts/idea.njk",
+    "layout": "layouts/single--idea.njk",
     "permalink": "/ideas/{{ title | slug }}/",
     "headerBgColor": "white",
     "author": "IDRC Team"
