--- a/package.json
+++ b/package.json
@@ -4,21 +4,18 @@
   "description": "Website for the Inclusive Design Research Centre.",
   "main": "eleventy.config.js",
   "scripts": {
-    "build:assets": "cross-env NODE_ENV=production run-s mix",
     "build:site": "ELEVENTY_ENV=production eleventy",
     "build:bundle": "rollup --config",
     "build:cms": "make-dir dist/admin && nunjucks-precompile src/_includes > dist/admin/templates.js -i \"\\.(njk|svg)$\"",
     "build": "run-s clean build:*",
     "clean": "run-p clean:*",
     "clean:dist": "rimraf dist",
-    "mix": "webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "start": "npm run clean && npm run build:bundle && npm run build:cms && concurrently \"npm run watch:site\" \"npm run watch:assets\"",
+    "start": "npm run clean && npm run build:bundle && npm run build:cms && npm run watch",
     "lint:css": "stylelint src/scss/**/*.scss",
     "lint:js": "xo",
     "lint": "run-s lint:*",
     "test": "run-s lint",
-    "watch:assets": "cross-env NODE_ENV=development run-s \"mix -- --watch\"",
-    "watch:site": "ELEVENTY_ENV=development eleventy --serve --port=3000"
+    "watch": "ELEVENTY_ENV=development eleventy --serve --port=3000"
   },
   "repository": {
     "type": "git",
@@ -48,45 +45,43 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@erquhart/rollup-plugin-node-builtins": "^2.1.5",
-    "browser-sync-webpack-plugin": "^2.0.1",
+    "@tbranyen/jsdom": "^13.0.0",
+    "babel-loader": "^8.1.0",
     "clean-css": "^4.2.3",
-    "concurrently": "^5.1.0",
-    "cross-env": "^7.0.0",
     "cssesc": "^3.0.0",
     "dotenv": "^8.2.0",
     "eleventy-plugin-error-overlay": "^0.1.2",
+    "html-minifier": "^4.0.0",
     "husky": "^4.2.3",
-    "laravel-mix": "^5.0.1",
     "lint-staged": "^10.0.8",
     "make-dir-cli": "^2.0.0",
+    "memory-fs": "^0.5.0",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
+    "nunjucks": "^3.2.1",
     "resolve-url-loader": "^3.1.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.6.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "sass": "^1.26.10",
-    "sass-loader": "^8.0.2",
+    "slugify": "^1.4.0",
     "stylelint": "^13.2.1",
     "stylelint-config-standard-scss": "^1.1.0",
     "stylelint-order": "^4.0.0",
     "stylelint-scss": "^3.15.0",
-    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.44.1",
     "xo": "^0.33.0"
   },
   "dependencies": {
     "@11ty/eleventy": "^0.10.0",
     "@11ty/eleventy-navigation": "^0.1.5",
     "@11ty/eleventy-plugin-rss": "^1.0.7",
-    "@tbranyen/jsdom": "^13.0.0",
-    "eleventy-plugin-pwa": "^1.0.8",
-    "html-minifier": "^4.0.0",
-    "nunjucks": "^3.2.1",
-    "slugify": "^1.4.0"
+    "eleventy-plugin-pwa": "^1.0.8"
   }
 }
