--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eleventy-plugin-error-overlay": "^0.1.2",
     "html-minifier": "^4.0.0",
     "husky": "^4.2.3",
+    "image-size": "^0.8.3",
     "lint-staged": "^10.0.8",
     "make-dir-cli": "^2.0.0",
     "memory-fs": "^0.5.0",
