feat: add ideas section (#45)
* feat: add ideas and basic styles

* feat: add single idea, harmonize bylines

* feat: indicate that current page is child of nav item

* feat: [WIP] add ideas grid

* feat: add debug command

* feat: override default slug filter with strict character replacement

* feat: ideas page with featured idea support

* fix: adjust feed link in meta info

* fix: restore padding to bottom of ideas page

* feat: add tags support to editor

* feat: add image support for ideas

* feat: add images to ideas post

* feat: rename post to news, integrate RSS feed, add featured images

* feat: update CMS configuration

* fix: correctly identify internal links

* fix: restore news page

* fix: remove featured images

* fix: remove featured image SCSS

* fix: increase space between mobile grid items

* fix: switch to Merriweather on desktop

* fix: restore image-size package

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "run-s clean build:*",
     "clean": "run-p clean:*",
     "clean:dist": "rimraf dist",
+    "debug": "DEBUG=Eleventy* eleventy",
     "start": "npm run clean && npm run build:bundle && npm run build:cms && npm run watch",
     "lint:css": "stylelint src/scss/**/*.scss",
     "lint:js": "xo",
@@ -58,6 +59,7 @@
     "eleventy-plugin-error-overlay": "^0.1.2",
     "html-minifier": "^4.0.0",
     "husky": "^4.2.3",
+    "image-size": "^0.8.3",
     "lint-staged": "^10.0.8",
     "make-dir-cli": "^2.0.0",
     "memory-fs": "^0.5.0",
