--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@commitlint/config-conventional": "^8.3.4",
     "@erquhart/rollup-plugin-node-builtins": "^2.1.5",
     "@tbranyen/jsdom": "^13.0.0",
+    "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
     "clean-css": "^4.2.3",
     "cssesc": "^3.0.0",
@@ -66,6 +67,7 @@
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "nunjucks": "^3.2.1",
+    "postcss": "^7.0.32",
     "resolve-url-loader": "^3.1.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.6.1",
